--- a/style.css
+++ b/style.css
@@ -1,61 +1,96 @@
 .container {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    position: relative;
-  }
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  position: relative;
+  font-family: 'Open Sans';
+}
   
-  .slider-page {
-    position: absolute;
-    width: 50px;
-    height: 30px;
-    padding: 3px;
-    background: #000;
-    color: #fff;
-    font-size: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 3px;
-    right: 25px;
-    bottom: 5px;
-  }
+.slider-page {
+  position: absolute;
+  width: 50px;
+  height: 30px;
+  padding: 3px;
+  background: #000;
+  color: #fff;
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 3px;
+  right: 25px;
+  bottom: 5px;
+}
   
-  .slider-page p {
-    margin: 0;
-  }
+.slider-page p {
+  margin: 0;
+}
   
-  .section {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    opacity: 0;
-    visibility: hidden;
-    transition: 0.5s;
-  }
+.section {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.5s;
+}
+
+.section.active {
+  opacity: 1;
+  visibility: visible;
+}
+
+.wrapper {
+  width: 50%;
+  height: 100%;
+}
   
-  .section.active {
-    opacity: 1;
-    visibility: visible;
-  }
+.slide-1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-size: 60px;
+}
   
-  .slide-1 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 30px;
-  }
+.slide-2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.slide-2 .wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.slide-2 .wrapper:first-of-type {
+  font-size: 50px;
+}
+
+.slide-2 .wrapper:last-of-type {
+  font-size: 28px;
+}
+
+.slide-2 li:nth-child(even) {
+  background: whitesmoke;
+}
+
+.slide-2 img {
+  margin-top: 10px;
+}
   
-  .slide-2 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 220px;
-  }
-  
-  .slide-3 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 100px;
-  }
+.slide-3 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 28px;
+}
+
+.slide-3 .wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
