--- a/style.css
+++ b/style.css
@@ -3,9 +3,8 @@
   height: 100vh;
   display: flex;
   position: relative;
-  font-family: 'Open Sans';
-}
-  
+  font-family: 'Open Sans'; }
+
 .slider-page {
   position: absolute;
   width: 50px;
@@ -19,78 +18,79 @@
   justify-content: center;
   border-radius: 3px;
   right: 25px;
-  bottom: 5px;
-}
-  
-.slider-page p {
-  margin: 0;
-}
-  
+  bottom: 5px; }
+  .slider-page p {
+    margin: 0; }
+
 .section {
   width: 100%;
   height: 100%;
   position: absolute;
   opacity: 0;
   visibility: hidden;
-  transition: 0.5s;
-}
+  transition: 0.5s; }
 
 .section.active {
   opacity: 1;
-  visibility: visible;
-}
+  visibility: visible; }
 
 .wrapper {
   width: 50%;
-  height: 100%;
-}
-  
+  height: 100%; }
+
 .slide-1 {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  font-size: 60px;
-}
-  
+  font-size: 60px; }
+
 .slide-2 {
   display: flex;
   justify-content: center;
-  align-items: center;
-}
+  align-items: center; }
+  .slide-2 .wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column; }
+  .slide-2 .wrapper:first-of-type {
+    font-size: 50px; }
+  .slide-2 .wrapper:last-of-type {
+    font-size: 28px; }
+  .slide-2 img {
+    margin-top: 10px; }
 
-.slide-2 .wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-
-.slide-2 .wrapper:first-of-type {
-  font-size: 50px;
-}
-
-.slide-2 .wrapper:last-of-type {
-  font-size: 28px;
-}
-
-.slide-2 li:nth-child(even) {
-  background: whitesmoke;
-}
-
-.slide-2 img {
-  margin-top: 10px;
-}
-  
 .slide-3 {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 28px;
-}
+  font-size: 28px; }
+  .slide-3 .wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center; }
 
-.slide-3 .wrapper {
+.slide-4 {
   display: flex;
   justify-content: center;
-  align-items: center;
-}
+  align-items: center; }
+  .slide-4 .wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column; }
+  .slide-4 .picture-text {
+    position: relative;
+    top: -15px; }
+  .slide-4 ul {
+    list-style: initial;
+    font-size: 26px; }
+    .slide-4 ul li {
+      padding: 5px; }
+      .slide-4 ul li:nth-child(even) {
+        background-color: lightgrey; }
+  .slide-4 .wrapper:last-of-type p {
+    font-size: 24px;
+    margin-top: 15px;
+    width: 90%; }
