--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,6 +4,10 @@
     align-items: center;
 }
 
+.bold {
+    font-weight: bold;
+}
+
 .container {
     width: 100%;
     height: 100vh;
@@ -147,5 +151,25 @@
         margin-top: 30px;
         width: 50%;
         font-size: 24px;
+    }
+}
+
+.slide-8 {
+    @include flexbox;
+    flex-direction: column;
+    .magistrala {
+        font-size: 24px;
+        width: 60%;
+        margin-bottom: 40px;
+    }
+    ul {
+        list-style: initial;
+        font-size: 24px;
+        width: 60%;
+        li {
+            &:nth-child(odd) {
+                background-color: lightgrey;
+            }
+        }
     }
 }
