--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+.bold {
+  font-weight: bold; }
+
 .container {
   width: 100%;
   height: 100vh;
@@ -132,3 +135,19 @@
     margin-top: 30px;
     width: 50%;
     font-size: 24px; }
+
+.slide-8 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column; }
+  .slide-8 .magistrala {
+    font-size: 24px;
+    width: 60%;
+    margin-bottom: 40px; }
+  .slide-8 ul {
+    list-style: initial;
+    font-size: 24px;
+    width: 60%; }
+    .slide-8 ul li:nth-child(odd) {
+      background-color: lightgrey; }
